--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "breedingai",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "openai": "^4.0.0"
   }
 }
