--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breedingai",
+  "name": "breedingai-backend",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "openai": "^4.0.0"
+    "cors": "^2.8.5"
   }
 }
 
