--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "breedingai-backend",
   "version": "1.0.0",
+  "description": "Backend profesional para análisis de cruces caninos - BreedingAI",
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "stripe": "^14.0.0"
+    "express": "^4.19.2",
+    "openai": "^4.38.0",
+    "stripe": "^14.25.0"
   }
 }
-
