--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.19.2",
+    "openai": "^4.30.0",
+    "stripe": "^14.0.0"
   }
 }
 
