--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "breedingai-backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "openai": "^4.30.0",
-    "stripe": "^14.0.0"
+    "express": "^4.18.2"
   }
 }
-
