--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "breedingai-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
