--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "breedingai-backend",
   "version": "1.0.0",
+  "description": "Backend BreedingAI",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "stripe": "^14.0.0"
   }
 }
 
