--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "engines": {
     "node": ">=18"
   },
-  "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "stripe": "^14.0.0",
-    "openai": "^4.47.1"
-  }
+"dependencies": {
+  "express": "^4.19.2",
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.5",
+  "stripe": "^14.0.0",
+  "openai": "^4.28.0"
+}
 }
