--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "breedingai-backend",
   "version": "1.0.0",
-  "description": "Backend BreedingAI con Stripe e IA profesional",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
-"dependencies": {
-  "express": "^4.19.2",
-  "cors": "^2.8.5",
-  "dotenv": "^16.4.5",
-  "stripe": "^14.0.0",
-  "openai": "^4.28.0"
-}
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "openai": "^4.28.0",
+    "stripe": "^14.21.0"
+  }
 }
